--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +45,7 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-router": "^3.0.28",
     "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^3.2.3",
     "typescript": "^4.6.2"
   }
 }
